--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Leonardo Javier Gago",
   "license": "MIT",
   "devDependencies": {
+    "@swc/cli": "^0.1.52",
+    "@swc/core": "^1.2.115",
     "@swc/jest": "^0.2.5",
     "@types/ejs": "^3.1.0",
     "@types/jest": "^27.0.3",
@@ -32,5 +34,7 @@
     "regenerator-runtime": "^0.13.9",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
   }
 }
